# fur_project

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  gen_fur_density.py  readme.md
binaries/: fur_project_linux
blender/: fur_project.blend  ricky.blend
lib/glad_gen/include/glad/: glad.h
lib/glad_gen/src/: glad.c
report/: presentation.tex  refs.bib  report.tex
res/models/: terrain.mtl
res/shaders/: compositor.frag  compositor.vert  flat_geom.frag  flat_geom.vert  fur.frag  fur.geom  fur.vert  fur_fin.frag  fur_fin.geom  fur_shell.frag  fur_shell.geom  oit.frag  simple.frag  simple.vert  skybox.frag  skybox.vert
res/textures/: paddle_nrm.pdn
src/: game.cpp  game.hpp  game_logic.cpp  game_logic.hpp  gamelogic.cpp  gamelogic.h  main.cpp  scenegraph.cpp  scenegraph.hpp  shader.cpp  shader.hpp  shader_uniform_defines.h  shader_uniform_defines.hpp  window.hpp
src/utilities/: glfont.cpp  glfont.hpp  glutils.cpp  glutils.hpp  imageLoader.cpp  imageLoader.hpp  mesh.cpp  mesh.hpp  shader.hpp  shapes.cpp  shapes.hpp
src/utils/: mesh.cpp  mesh.hpp  timeutils.cpp  timeutils.h
